LALRfinal/y.output
Grammar

    0 $accept: S $end

    1 S: E

    2 E: E '+' T
    3  | E '-' T
    4  | T

    5 T: T '*' F
    6  | T '/' F
    7  | F

    8 F: '(' E ')'
    9  | NUMBER


Terminals, with rules where they appear

$end (0) 0
'(' (40) 8
')' (41) 8
'*' (42) 5
'+' (43) 2
'-' (45) 3
'/' (47) 6
error (256)
NUMBER (258) 9


Nonterminals, with rules where they appear

$accept (10)
    on left: 0
S (11)
    on left: 1, on right: 0
E (12)
    on left: 2 3 4, on right: 1 2 3 8
T (13)
    on left: 5 6 7, on right: 2 3 4 5 6
F (14)
    on left: 8 9, on right: 5 6 7


state 0

    0 $accept: . S $end

    NUMBER  shift, and go to state 1
    '('     shift, and go to state 2

    S  go to state 3
    E  go to state 4
    T  go to state 5
    F  go to state 6


state 1

    9 F: NUMBER .

    $default  reduce using rule 9 (F)


state 2

    8 F: '(' . E ')'

    NUMBER  shift, and go to state 1
    '('     shift, and go to state 2

    E  go to state 7
    T  go to state 5
    F  go to state 6


state 3

    0 $accept: S . $end

    $end  shift, and go to state 8


state 4

    1 S: E .
    2 E: E . '+' T
    3  | E . '-' T

    '+'  shift, and go to state 9
    '-'  shift, and go to state 10

    $default  reduce using rule 1 (S)


state 5

    4 E: T .
    5 T: T . '*' F
    6  | T . '/' F

    '*'  shift, and go to state 11
    '/'  shift, and go to state 12

    $default  reduce using rule 4 (E)


state 6

    7 T: F .

    $default  reduce using rule 7 (T)


state 7

    2 E: E . '+' T
    3  | E . '-' T
    8 F: '(' E . ')'

    '+'  shift, and go to state 9
    '-'  shift, and go to state 10
    ')'  shift, and go to state 13


state 8

    0 $accept: S $end .

    $default  accept


state 9

    2 E: E '+' . T

    NUMBER  shift, and go to state 1
    '('     shift, and go to state 2

    T  go to state 14
    F  go to state 6


state 10

    3 E: E '-' . T

    NUMBER  shift, and go to state 1
    '('     shift, and go to state 2

    T  go to state 15
    F  go to state 6


state 11

    5 T: T '*' . F

    NUMBER  shift, and go to state 1
    '('     shift, and go to state 2

    F  go to state 16


state 12

    6 T: T '/' . F

    NUMBER  shift, and go to state 1
    '('     shift, and go to state 2

    F  go to state 17


state 13

    8 F: '(' E ')' .

    $default  reduce using rule 8 (F)


state 14

    2 E: E '+' T .
    5 T: T . '*' F
    6  | T . '/' F

    '*'  shift, and go to state 11
    '/'  shift, and go to state 12

    $default  reduce using rule 2 (E)


state 15

    3 E: E '-' T .
    5 T: T . '*' F
    6  | T . '/' F

    '*'  shift, and go to state 11
    '/'  shift, and go to state 12

    $default  reduce using rule 3 (E)


state 16

    5 T: T '*' F .

    $default  reduce using rule 5 (T)


state 17

    6 T: T '/' F .

    $default  reduce using rule 6 (T)
